icons, pretty colors, and a legend

--- a/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
+++ b/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
@@ -1,6 +1,5 @@
 <template>
-    <div class="slds-m-around_medium"> 
-        <div class="d3" lwc:dom="manual">
-        </div>
+    <div class="slds-m-around_medium">
+        <div class="d3" lwc:dom="manual"></div>
     </div>
 </template>
