basic popup working

--- a/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
+++ b/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
@@ -1,5 +1,18 @@
 <template>
     <div class="slds-m-around_medium">
+        {popupStyle}
         <div class="d3" lwc:dom="manual"></div>
+        <template if:true={showPopup}>
+            <div class="popup" style={popupStyle}>
+                <lightning-card title={popupTitle} variant="Narrow" icon-name="custom:custom14" classname="popup">
+                    <lightning-button-icon  icon-name="utility:close" variant="container" alternative-text="Show More" slot="actions" onclick={closePopup}></lightning-button-icon>
+
+                    <div class="slds-m-around_medium">
+                        Content goes here
+                    </div>
+                </lightning-card>
+            </div>
+        </template>
     </div>
+
 </template>
