--- a/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
+++ b/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
@@ -1,14 +1,16 @@
 <template>
-    <div class="slds-m-around_medium">
-        {popupStyle}
+    <div class="slds-var-m-around_medium">
         <div class="d3" lwc:dom="manual"></div>
         <template if:true={showPopup}>
             <div class="popup" style={popupStyle}>
                 <lightning-card title={popupTitle} variant="Narrow" icon-name="custom:custom14" classname="popup">
                     <lightning-button-icon  icon-name="utility:close" variant="container" alternative-text="Show More" slot="actions" onclick={closePopup}></lightning-button-icon>
-
-                    <div class="slds-m-around_medium">
-                        Content goes here
+                    <div class="slds-var-m-around_medium">
+                        <button class="slds-button" onclick={navigateToPopupRecord}>Navigate to record</button>
+                        <template if:true={isPerson}>
+                            <br/>
+                            Status Group: {personStatus}
+                        </template>
                     </div>
                 </lightning-card>
             </div>
