--- a/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
+++ b/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
@@ -1,5 +1,9 @@
 <template>
     <div class="slds-var-m-around_medium">
+        <template if:true={hasTitle}>
+            <div class="slds-text-heading_medium">{title}</div>
+        </template>
+        
         <div class="d3" lwc:dom="manual"></div>
         <template if:true={showPopup}>
             <div class="popup" style={popupStyle}>
