--- a/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
+++ b/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
@@ -6,12 +6,15 @@
         <div class="d3" lwc:dom="manual"></div>
         <div class="pancontrols">
             <div class="slds-grid">
+                <div class="slds-col" style="padding-top:32px;padding-right:10px">
+                    <lightning-button-icon icon-name="utility:undo" alternative-text="Undo" title="Undo" onclick={undo} disabled={undoDisabled}></lightning-button-icon>
+                </div>
                 <div class="slds-col">
                     <div class="slds-form-element">
                         <label class="slds-form-element__label" for="slider-id-01">
                             <span class="slds-slider-label">
                                 <span class="slds-slider-label__label">Zoom</span>
-                                <span class="slds-slider-label__range">1 - 7</span>
+                                <span class="slds-slider-range__label">1 - 7</span>
                             </span>
                         </label>
                         <div class="slds-form-element__control">
@@ -68,7 +71,7 @@
         </div>
         <template if:true={showPopup}>
             <div class="popup" style={popupStyle}>
-                <lightning-card title={popupTitle} variant="Narrow" icon-name="custom:custom14" classname="popup">
+                <lightning-card title={popupTitle} variant="Narrow" icon-name="custom:custom14">
                     <lightning-button-icon icon-name="utility:close" variant="container" alternative-text="Show More"
                         slot="actions" onclick={closePopup}></lightning-button-icon>
                     <div class="slds-var-m-around_medium">
