Added license and copyright

--- a/force-app/main/default/lwc/contactTracingGraphPopup/contactTracingGraphPopup.html
+++ b/force-app/main/default/lwc/contactTracingGraphPopup/contactTracingGraphPopup.html
@@ -1,3 +1,10 @@
+<!-- 
+/*
+ * Copyright (c) 2020, salesforce.com, inc.
+ * All rights reserved.
+ * SPDX-License-Identifier: CC-0
+ * For full license text, see the LICENSE file in the repo root
+ */-->
 <template>
     <lightning-card title={title} variant="Narrow" icon-name="custom:custom14">
         <lightning-button-icon icon-name="utility:close" variant="container" alternative-text="Show More" slot="actions"
