--- a/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
+++ b/force-app/main/default/lwc/contactTracingGraph/contactTracingGraph.html
@@ -1,3 +1,11 @@
+<!-- 
+/*
+ * Copyright (c) 2020, salesforce.com, inc.
+ * All rights reserved.
+ * SPDX-License-Identifier: CC-0
+ * For full license text, see the LICENSE file in the repo root
+ */
+-->
 <template>
     <div class="graph slds-var-m-around_medium">
         <template if:true={hasTitle}>
